Note conversion to Test::Fatal

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@ Revision history for Perl extension MooseX-Params-Validate
 0.15
     - Add MX_PARAMS_VALIDATE_ALLOW_EXTRA which allows extra parameters in
       validation calls (like allow_extra for Params::Validate).
+    - Converted to Test::Fatal.
 
 0.14 Sun. Mar. 18, 2010
     - The validated_hash method failed when called on in an overloaded
