--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 Revision history for Perl extension MooseX-Params-Validate
 
-    - Don't rely on callback order in tests
+    - Fix tests that broke with new hash randomization in 5.17.6. (Dagfinn
+      Ilmari Mannsåker)
 
 0.16 2011-01-29
     - The validated_list and validated_hash functions now accept the values to
