Added 'depends' support

--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 {{$NEXT}}
+    - Added support for the depends parameter. RT #98685. (Hans Staugaard)
 
 0.18 2013-01-16
     - Fix broken prereq specification in 0.17. Reported by Justin Hunter.
